# farmfs

./: .coverage.Andrews-MacBook-Pro-3.local.97537.XNWxfHCx  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README.md.orig  coverage.xml  coverage_master.xml  demo_connections.py  demo_connections2.py  demo_handles.md  diff_coverage_report.html  farmd_plan.md  pyproject.toml  report.html  setup.py  tox.ini
.claude/: settings.local.json
.lsp/.cache/: db.transit.json
farmfs/: __init__.py  api.py  blobstore.py  compose.py  dbg.py  farmd.py  farmd_ui.py  farmdbg.py  farmui.py  fs.py  fsck_types.py  keydb.py  pipeline.py  progress.py  pyramid.py  remote.py  snapshot.py  transduce.py  transducer3.py  ui.py  ui.py.orig  util.py  util.py.orig  volume.py
perf/: reduce.py  transducer.py
tests/: __init__.py  conftest.py  test_api.py  test_blobstore.py  test_diff.py  test_farmd.py  test_farmd_smart.py  test_farmd_ui.py  test_fs.py  test_keydb.py  test_pull.py  test_snap.py  test_snap_size.py  test_transduce.py  test_trees2.py  test_ui.py  test_util.py  test_util.py.orig  test_volume.py  trees.py  trees2.py
